<?xml version="1.0"?>
<package>
  <name>mavproxy_ros</name>
  <version>1.0</version>
  <description>
    mavproxy ros wrapper
  </description>
  <maintainer email="echo.ren@goertek.com">Echo Ren</maintainer>
  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>
  <author>Echo Ren</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- <test_depend>roscpp_tutorials</test_depend> -->
</package>
